--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -1,7 +1,12 @@
 @charset "UTF-8";
 
 .container {
-	width: 680px;
+    min-height: 100%;
+    padding: 0 18px;
+    background-color: #fff;
+    width: 980px;
+    margin: 14px auto 0;
+    position: relative;
 }
 
 footer {
